--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,24 @@
 {
-    "name": "eyghtdigit/macro-essentials",
-    "description": "Laravel macro essentials",
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Eyghtdigit\\MacroEssentials\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "avgkudey",
-            "email": "40860028+avgkudey@users.noreply.github.com"
-        }
-    ],
-    "require-dev": {
-        "orchestra/testbench": "^7.0"
+  "name": "eyghtdigit/macro-essentials",
+  "description": "Laravel macro essentials",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "avgkudey",
+      "email": "40860028+avgkudey@users.noreply.github.com"
     }
+  ],
+  "require-dev": {
+    "orchestra/testbench": "^7.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Eyghtdigit\\MacroEssentials\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Eyghtdigit\\MacroEssentials\\Tests\\": "tests/"
+    }
+  }
 }
